--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -15,7 +15,7 @@
     gap: 5px;
 }
 
-.chatContainer {
+/* .chatContainer {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -25,7 +25,25 @@
     border-radius: 8px;
     overflow-y: auto;
     max-height: calc(100vh - 100px);
+} */
+
+.chatContainer {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: url('./static/assets/Fujitsu_Photo2.jpg') center center no-repeat;
+    background-size: cover;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 8px;
+    overflow-y: auto;
+    max-height: calc(100vh - 100px);
 }
+
+
+
+
+
 
 .chatEmptyState {
     flex-grow: 1;
